CHANGELOG
=========

0.16.0: unreleased
------------------
- Added support for Python 3.8
- Dropped support for Python <3.6
- Added than support for zpopmin and zrangebylex methods
- Fix DeprecationWarning for inspect.formatargspec()
- Fix missing object asyncio.streams.IncompleteReadError


0.15.1: 2018-07-30
------------------

- Added Python 3.7 compatibility.
- Added several options to zadd and zincrby.
- Bugfix in concurrency with transactions:

    * Transactions were apparently prone to race conditions, because crutial
      parts of the transaction did a 'yield' while entering the transaction in
      the 'multi' command. This has been fixed now by using an asyncio.Lock.
    * Because of this, it also became possible to start multiple
      transactions or commands on the same connection. If the lock was
      acquired by another transaction/command, will will wait instead of
      raising an exception.

- Fall back to asyncio.async when asyncio.ensure_future is not available.
- Encode scripts using utf-8 instead of ascii.
- Better handle timeouts during pubsub.


0.14.3: 2016-09-04
------------------

Fixes:
- Better handle timeouts during pubsub. (Handle IncompleteReadError.)
- Use asyncio.ensure_future instead of deprecated async() when available.
- Encode scripts using utf-8 instead of ascii.
- Bugfix in concurrency with transactions:
    * Transactions were apparently prone to race conditions, because crutial
      parts of the transaction did a 'yield' while entering the transaction in
      the 'multi' command. This has been fixed now by using an asyncio.Lock.
    * Because of this, it also became possible to start multiple
      transactions or commands on the same connection. If the lock was acquired
      by another transaction/command, will will wait instead of raising an
      exception.

0.14.2: 2015-12-16
------------------

Fixes:
- Added a few missing @asyncio.coroutine decorators for Python 3.5
  compatibility.


0.14.1: 2015-08-08